# windows-realtime-audio-diagnostics

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: interpreting-log-metrics.md  realtime-audio-glossary.md  virtual-audio-cable-checklist.md
examples/: sample_realtime_log.jsonl
src/wrad/: __init__.py  device_notes.py  log_summary.py  wav_stats.py
tests/: test_log_summary.py  test_wav_stats.py
