[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windows-realtime-audio-diagnostics"
version = "0.1.0"
description = "Small diagnostics for Windows low-latency realtime audio development."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "windows-realtime-audio-diagnostics contributors" }
]
keywords = ["audio", "windows", "realtime", "wav", "diagnostics", "latency"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.scripts]
wrad-wav-stats = "wrad.wav_stats:main"
wrad-log-summary = "wrad.log_summary:main"
wrad-device-notes = "wrad.device_notes:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/wrad"]
